--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,4 +9,5 @@
   --third-text-color: #ffffff;
   --adress-text-color: rgba(255, 255, 255, 0.6);
   --secondary-background-color: #f5f4fa;
+  --font-family: "Roboto", sans-serif;
 }
